# samp

./: .gitignore
.github/workflows/: release.yml
NoiseBasedSampler/: NoiseBasedSampler.jucer
NoiseBasedSampler/Source/: ADSRPanel.h  AlgoLabPanel.h  AlgorithmDNA.h  AlgorithmEngine.h  AlgorithmFileManager.h  AlgorithmLibrary.h  AlgorithmSection.h  AudioStateManager.h  BOOST_MOUSE_WHEEL.md  CMDTerminalToolsSection.h  ClipboardManager.h  ClipboardSidebar.h  DataSerializer.h  DifferenceAnalyzer.h  DifferenceEngine.h  EditableFeatureVisualization.h  EffectStateManager.h  FeatureData.h  FeatureExtractor.h  MLEvolutionEngine.h  MainPanel.h  NoiseGenerator.h  OptimizedPatternAnalyzer.h  Pattern.h  PatternAnalyzer.h  PatternDetector.h  PatternLibrary.h  PatternPanel.h  PatternPropertiesPanel.h  PatternSearchVisualization.h  PhaseVocoder.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProjectData.h  ProjectManager.cpp  ProjectManager.h  ProjectPanel.h  ProjectSerializer.h  (+15 more)
NoiseBasedSampler/Source/Core/: VersionInfo.h
NoiseBasedSampler/Source/UI/: AboutPanel.h
NoiseBasedSampler/Source/Update/: UpdaterLauncher.h
Updater/: CMakeLists.txt
Updater/Source/: Config.h  Main.cpp
Updater/Source/Core/: FileReplacer.h  GitHubAPI.h  ProcessMonitor.h  UpdateManager.h  UpdaterApp.h
Updater/Source/UI/: MainWindow.h
